{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 14,
  "lineage": "f960c31c-8144-e32c-37e1-c4d7fc2476bc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:279949895186:internet-gateway/igw-0cdb0356d71ba7606",
            "id": "igw-0cdb0356d71ba7606",
            "owner_id": "279949895186",
            "tags": {
              "Name": "terraform_igw"
            },
            "tags_all": {
              "Name": "terraform_igw"
            },
            "vpc_id": "vpc-06fbbb03aeaea99a4"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:279949895186:route-table/rtb-035079463cd88265a",
            "id": "rtb-035079463cd88265a",
            "owner_id": "279949895186",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdb0356d71ba7606",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_public_rt"
            },
            "tags_all": {
              "Name": "terraform_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fbbb03aeaea99a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_internet_gateway",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mtc_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e591b3928b12ba6",
            "route_table_id": "rtb-035079463cd88265a",
            "subnet_id": "subnet-0579f84ff6a0ce8d8"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_internet_gateway",
            "aws_route_table.terraform_public_rt",
            "aws_subnet.terraform_public_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:279949895186:security-group/sg-0802beafbb95b42ec",
            "description": "terraform Security Group ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0802beafbb95b42ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform_sg",
            "name_prefix": "",
            "owner_id": "279949895186",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fbbb03aeaea99a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:279949895186:subnet/subnet-0579f84ff6a0ce8d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0579f84ff6a0ce8d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "279949895186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_public_subnet"
            },
            "tags_all": {
              "Name": "terraform_public_subnet"
            },
            "vpc_id": "vpc-06fbbb03aeaea99a4"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:279949895186:vpc/vpc-06fbbb03aeaea99a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-05fe7f7f9e9d76049",
            "default_route_table_id": "rtb-0e37516f561a59d22",
            "default_security_group_id": "sg-0124ef9abaec51f37",
            "dhcp_options_id": "dopt-0db020f339cafae39",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06fbbb03aeaea99a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e37516f561a59d22",
            "owner_id": "279949895186",
            "tags": {
              "Name": "terraform"
            },
            "tags_all": {
              "Name": "terraform"
            }
          }
        }
      ]
    }
  ]
}